--- a/frontend/src/styles/_layout.scss
+++ b/frontend/src/styles/_layout.scss
@@ -66,6 +66,8 @@
     button {
       border: transparent;
       background-color: transparent;
+      width: 3rem;
+      height: 3rem;
     }
   }
 }
