--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -79,7 +79,7 @@ button {
   padding: 1rem;
   margin-top: 1rem;
   flex-wrap: wrap;
-  overflow: auto;
+  // overflow: auto;
   height: calc(100vh - 23rem);
   scrollbar-width: thin;
   border: solid 2px;
